tests/ui/public_step_name_import.stderr
error[E0432]: unresolved import `hibana::g::advanced::steps`
 --> tests/ui/public_step_name_import.rs:1:26
  |
1 | use hibana::g::advanced::steps::StepNil;
  |                          ^^^^^ could not find `steps` in `advanced`
